@@ -1,0 +1,3 @@
+int main(void) {
+    return 0;
+}
